# VisionProjectKrang

./: .gitignore  README.md  TODOs.txt  test_sheet.txt
CameraCalibration/Calibration_3-27/: ost_camera5_3-27.ini
CameraCalibration/Calibration_4-5/: camera_calibration.yaml
Documentation/: AAA_README_OVERVIEW.md  ACH CHANNELS AND MESSAGE FORMATS  ACHMessageFormats.md  CameraRigSetup.md  CameraUdevSetup.md  Data.md  Developer_Notes  Global.md  Helpers.md  Issues.md  MainProgram.md  OneCamera.md  ReadMe.md  Setup.md  Simulation.md  Workflow.md
MATLAB/: getEulerAngles.m
Obsolete/CameraCalibration/Calibration_3-27/: camera_calibration_camera1_3-27.yaml  ost_camera1_3-27.ini  ost_camera2_3-27.ini  ost_camera3_3-27.ini  ost_camera4_3-27.ini
Obsolete/CameraCalibration/Calibration_4-5/: ost_camera2_4-5.ini
Obsolete/MATLAB/: getAvgMatrix.m  getEulerAngles.m  getMatrixFromEuler.m
Obsolete/camProc/: ARCamera.cpp  ARMarker.cpp  CMakeLists.txt  CameraCentralProcess.h  CameraProcess.h  MarkerPositions.cpp  Object.h  camCentralProcessMain.cpp  camProcessMain.cpp  camReader.cpp  globalData.h  globalTransforms.cpp
Obsolete/camProc/AnaWorkstationTests/: camera3_dev2.txt
Obsolete/camProc/Data/: Camera3GlobalMarker.txt  cam5_calib.yaml
Obsolete/camProc/ExperimentsResults/: Camera4GlobalMarker.txt
Obsolete/camProc/cameraController/: cameraController.cpp  cameraController.h  cameraControllerApp.cpp
Obsolete/camProc/scenes/: NAMO_scene.urdf  bicolorRod.urdf  chair.urdf  goldenPad.urdf  origin.urdf
Obsolete/camProc/scenes/meshes/: goldenPad.3ds  origin.dae
TestReports/: test1.txt  testReport_accuracyPosition.txt  testReport_blah  testReport_calibration.txt  testReport_detectionConfidence.txt  testReport_resolution.txt
alvarCode/: ARMarker.h  CMakeCache.txt  CMakeLists.txt  CameraCentralProcess.cpp  CameraCentralProcess.h  Makefile  Object.h  WorldModel.cpp  WorldModel.h  basicFilter.cpp  basicFilter.h  camCentralProcessMain.cpp  camProcess.cpp  camera_calibration_highgui_0.xml  cleanup.cpp  cmake_install.cmake  getCameraTransform.cpp  globalData.cpp  globalData.h  globalTransforms.cpp  plot.sh  runCalibration.cpp  run_extrinsic_calibration.py  visionClient.sh
alvarCode/Data/: camCalib0.xml  camCalib1.xml  camCalib2.xml  camCalib3.xml  camCalib4.xml  camCalib_0.xml  camCalib_1.xml  camCalib_2.xml  camCalib_3.xml
alvarCode/Data/Transf_Cam_Marker4/: camera0_marker4.txt  camera1_marker4.txt  camera2_marker4.txt  camera3_marker4.txt
alvarCode/Data/markers_small/: MarkerData_10_1.xml  MarkerData_10_3.xml  MarkerData_10_4.xml  MarkerData_10_5.xml  MarkerData_10_6.xml
alvarCode/Data/patterns/: MarkerData_10_0.xml  MarkerData_20_0.xml  MarkerData_20_1.xml  MarkerData_20_2.xml  MarkerData_20_3.xml  MarkerData_20_4.xml  MarkerData_20_5.xml  MarkerData_20_6.xml  MarkerData_20_7.xml  MarkerData_20_8.xml
alvarCode/cameraController/: cameraController.cpp
alvarCode/globalStuff/: CMakeLists.txt  Makefile  Object.cpp  Object.h  config.json  globalData.cpp  globalData.h  globalTest.cpp  globalTransforms.cpp  globalTransforms.h  object.cpp  optparser.cpp  optparser.h  testGlobals
alvarCode/helpers/: CMakeCache.txt  CMakeLists.txt  Makefile  getCameraTransform.cpp  runCalibration.cpp  testFilter.cpp  testFilter.sh  testFilterPlot.cpp  testSubscriber.cpp
alvarCode/testSimulation/: CMakeLists.txt  Makefile  cmake_install.cmake  testSimulation.cpp  testSimulation.h
alvarCode/viz/: CvTestbed.h  GlutViewer.cpp  Makefile  Shared.h
alvarCode/worldModel/: ARCamera.cpp  ARCamera.h  ARMarker.cpp  ARMarker.h  CMakeLists.txt  Makefile  WorldModel.cpp  WorldModel.h
camProc/: ARCamera.cpp  ARCamera.h  ARMarker.h  CMakeLists.txt  CameraCentralProcess.cpp  CameraCentralProcess.h  CameraProcess.cpp  CameraProcess.h  MarkerPositions.cpp  Object.h  WorldModel.cpp  WorldModel.h  camCentralProcessMain.cpp  camProcess.cpp  camProcessMain.cpp  camReader.cpp  cleanup.cpp  command.sh  globalData.h  globalTransforms.cpp  globalTransforms.h  oneView.cpp  twoView.c
camProc/AnaWorkstationTests/: camera0.txt  camera1_dev0.txt  camera2_dev1.txt
camProc/Data/: AvgTransforms.txt  Camera1GlobalMarker.txt  cam2_calib.yaml  cam3_calib.yaml  cam4_calib.yaml
camProc/ExperimentsResults/: Camera2GlobalMarker.txt
camProc/cameraController/: CMakeLists.txt  cameraController.cpp  cameraController.h  globalData.h
camProc/scenes/: NAMO_scene.urdf  redBall.urdf  rodPad.urdf  table.urdf
camProc/scenes/meshes/: goldenPad.blend  simpleChair.dae
src/: BasicFilter2.cpp  BasicFilter2.h  CMakeLists.txt  CamProcess.cpp  CamProcess.h  CameraCentralProcess.cpp  CameraCentralProcess.h  Object.cpp  Object.h  basicFilter.cpp  basicFilter.h  camCentralProcessMain.cpp  camProcess.cpp  camProcess.h  camProcessMain.cpp  cleanup.cpp  run_extrinsic_calibration.py  run_extrinsic_calibration_test.py  test.sh  utils.cpp  utils.h  visionClient.sh
src/Data/: camCalib0.xml  camCalib1.xml  camCalib2.xml  camCalib3.xml  camCalib4.xml  camCalib5.xml
src/Data/markers_small/: MarkerData_10_2.xml  MarkerData_10_7.xml  MarkerData_10_8.xml
src/globalStuff/: CMakeLists.txt  Object.cpp  Object.h  config.json  globalData.cpp  globalData.h  globalTest.cpp  optparser.cpp
src/helpers/: generateMarkers.cpp  getCameraTransform.cpp  runCalibration.cpp  testFilter.cpp  testFilterPlot.cpp  testSubscriber.cpp
src/testSimulation/: testSimulation.cpp  testSimulationApp.cpp
src/viz/: CMakeLists.txt
src/worldModel/: WorldModel.cpp  WorldModel.h
tests/: test1.txt
